fix(module: radio): fix listitem can't click when not using list wraper

--- a/components/radio/style/index.less
+++ b/components/radio/style/index.less
@@ -70,35 +70,33 @@
   }
 }
 
-.@{listPrefixCls} {
-  & &-item {
-    &.@{radioWarpPrefixCls}-item {
-      .@{listPrefixCls}-line {
-        .@{listPrefixCls}-extra {
-          flex: 0;
+.@{listPrefixCls}-item {
+  &.@{radioWarpPrefixCls}-item {
+    .@{listPrefixCls}-line {
+      .@{listPrefixCls}-extra {
+        flex: 0;
 
-          .@{radioWarpPrefixCls} {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            height: @list-item-height;
-            overflow: visible;
+        .@{radioWarpPrefixCls} {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          width: 100%;
+          height: @list-item-height;
+          overflow: visible;
 
-            &-inner {
-              right: @v-spacing-lg;
-              top: @h-spacing-lg;
-            }
+          &-inner {
+            right: @v-spacing-lg;
+            top: @h-spacing-lg;
           }
         }
       }
+    }
 
-      &.@{radioWarpPrefixCls}-item-disabled {
-        .@{listPrefixCls}-content {
-          color: @color-text-disabled;
-        }
+    &.@{radioWarpPrefixCls}-item-disabled {
+      .@{listPrefixCls}-content {
+        color: @color-text-disabled;
       }
     }
   }
